[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
electron-rs = { git = "https://github.com/Electron-Labs/electron-rs" }
mimc-sponge-rs = { git = "https://github.com/tzilkha/mimc-sponge-rs" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
