[package]
name = "contract"
version = "0.1.0"
edition = "2021"
authors = ["Magamedrasul Ibragimov"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
serde_json = "1.0"
uint = { version = "0.9.4", default-features = false }
electron-rs = { git = "https://github.com/Electron-Labs/electron-rs" }
mimc-sponge-rs = { git = "https://github.com/tzilkha/mimc-sponge-rs", rev = "449e1c9" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
